# pick-my-distro

./: ARCHITECTURE.md  DATABASE_QUICK_REFERENCE.md  DATABASE_SETUP.md  PROJECT_STRUCTURE.md  QUICKSTART.md  package-lock.json  package.json  pyproject.toml
Backend/: pyproject.toml
app/: page.tsx
app/admin/dashboard/: page.tsx
app/api/admin/auth/: route.ts
app/api/admin/session/: route.ts
app/api/distros/: route.ts
app/api/distros/attributes/: route.ts
app/frontend/: page.tsx
backend/: db.sqlite3
backend/AdminPage/: models.py  urls.py  views.py
backend/AdminPage/migrations/: 0001_initial.py
backend/AdminPage/static/AdminPage/js/: admin.js
backend/AdminPage/templates/: base.html
backend/AdminPage/templates/pages/: admin_page.html
backend/picker/: .env  asgi.py  settings.py  urls.py  wsgi.py
components/: AdminLogin.tsx  DistroFilter.tsx  DistroManagement.tsx
lib/: auth.ts  db.ts
prisma/: schema.prisma  seed.ts
