[project]
name = "pick-my-distro"
version = "0.1.0"
description = ""
authors = [
    {name = "141Kamrul",email = "bsse1418@iit.du.ac.bd"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "mysqlclient (>=2.2.8,<3.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "django-pdb (>=0.6.2,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
