[project]
name = "django"
version = "0.1.0"
description = ""
authors = [
    {name = "141Kamrul",email = "bsse1418@iit.du.ac.bd"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gunicorn (>=25.3.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
